--- a/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
@@ -70,7 +70,7 @@
                                     <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o4R-Ro-HrG">
                                         <rect key="frame" x="10" y="113" width="370" height="216"/>
                                         <color key="backgroundColor" red="0.37258751130000001" green="0.67752717129999995" blue="0.98318797349999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
+                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
                                             <size key="itemSize" width="128" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
