--- a/Pokedex/PokemonSelected/Collection/Sobre/SobreCollectionViewCell.xib
+++ b/Pokedex/PokemonSelected/Collection/Sobre/SobreCollectionViewCell.xib
@@ -12,14 +12,14 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="SobreCollectionViewCell" id="iYv-Vg-207" customClass="SobreCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="355" height="181"/>
+            <rect key="frame" x="0.0" y="0.0" width="359" height="177"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="355" height="181"/>
+                <rect key="frame" x="0.0" y="0.0" width="359" height="177"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Inc-dm-cJA">
-                        <rect key="frame" x="0.0" y="0.0" width="355" height="181"/>
+                        <rect key="frame" x="0.0" y="0.0" width="359" height="177"/>
                         <subviews>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Sobre" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="rFu-sw-0wy">
                                 <rect key="frame" x="18.000000000000004" y="13" width="51.333333333333343" height="22"/>
@@ -28,10 +28,11 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="JFV-dt-iGm">
-                                <rect key="frame" x="18" y="49.000000000000007" width="327" height="101.66666666666669"/>
+                                <rect key="frame" x="18" y="49" width="331" height="122"/>
                                 <string key="text">Lorem ipsum dolor sit amet, consectetur adipiscing
 elit, sed do eiusmod tempor incididunt ut labore et dolore
-magna aliqua. </string>
+magna aliqua. 
+</string>
                                 <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
@@ -55,12 +56,12 @@ magna aliqua. </string>
                 <constraint firstAttribute="bottom" secondItem="Inc-dm-cJA" secondAttribute="bottom" id="lv4-s1-N5t"/>
                 <constraint firstAttribute="trailing" secondItem="Inc-dm-cJA" secondAttribute="trailing" id="riB-2i-ojO"/>
             </constraints>
-            <size key="customSize" width="355" height="181"/>
+            <size key="customSize" width="359" height="177"/>
             <connections>
                 <outlet property="aboutLabel" destination="JFV-dt-iGm" id="veh-Vb-kXm"/>
                 <outlet property="titleLabel" destination="rFu-sw-0wy" id="Gvj-eI-GIA"/>
             </connections>
-            <point key="canvasLocation" x="319.23076923076923" y="67.180094786729853"/>
+            <point key="canvasLocation" x="322.30769230769232" y="65.758293838862556"/>
         </collectionViewCell>
     </objects>
     <resources>
