--- a/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
+++ b/Pokedex/PokemonSelected/PokemonSelected/pokemonSelected.storyboard
@@ -67,10 +67,10 @@
                                         <color key="textColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                         <nil key="highlightedColor"/>
                                     </label>
-                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o4R-Ro-HrG">
-                                        <rect key="frame" x="0.0" y="113" width="390" height="216"/>
-                                        <color key="backgroundColor" red="0.37258751130000001" green="0.67752717129999995" blue="0.98318797349999998" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
-                                        <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
+                                    <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="o4R-Ro-HrG">
+                                        <rect key="frame" x="0.0" y="113" width="390" height="287"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="vuz-DW-Z1o">
                                             <size key="itemSize" width="128" height="128"/>
                                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -78,40 +78,9 @@
                                         </collectionViewFlowLayout>
                                         <cells/>
                                     </collectionView>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CLD-AA-hae">
-                                        <rect key="frame" x="138" y="334" width="114" height="36"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="36" id="IF3-BZ-f8p"/>
-                                            <constraint firstAttribute="width" constant="114" id="Q5S-dy-0kS"/>
-                                        </constraints>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Habilidades"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UgV-Xg-l2o">
-                                        <rect key="frame" x="10" y="334" width="114" height="36"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="114" id="F4q-dR-04Q"/>
-                                            <constraint firstAttribute="height" constant="36" id="wf9-41-LLa"/>
-                                        </constraints>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Sobre"/>
-                                    </button>
-                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="6kM-yo-ggq">
-                                        <rect key="frame" x="266" y="334" width="114" height="36"/>
-                                        <constraints>
-                                            <constraint firstAttribute="width" constant="114" id="Jaw-fU-ZhC"/>
-                                            <constraint firstAttribute="height" constant="36" id="vcz-Tr-WlP"/>
-                                        </constraints>
-                                        <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                                        <state key="normal" title="Button"/>
-                                        <buttonConfiguration key="configuration" style="plain" title="Atributos"/>
-                                    </button>
                                 </subviews>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                 <constraints>
-                                    <constraint firstItem="CLD-AA-hae" firstAttribute="top" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="5" id="0qM-C2-hyd"/>
                                     <constraint firstAttribute="trailing" secondItem="o4R-Ro-HrG" secondAttribute="trailing" id="7To-p7-Qxt"/>
                                     <constraint firstItem="pOP-O8-6Cs" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="66" id="7Wg-Um-BXN"/>
                                     <constraint firstItem="o4R-Ro-HrG" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" id="ING-34-K8e"/>
@@ -128,16 +97,21 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                     </constraint>
-                                    <constraint firstAttribute="trailing" secondItem="pOP-O8-6Cs" secondAttribute="trailing" constant="80" id="Qs8-Ox-kFE"/>
-                                    <constraint firstItem="UgV-Xg-l2o" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" constant="10" id="Ugm-13-Lfy"/>
-                                    <constraint firstItem="6kM-yo-ggq" firstAttribute="top" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="5" id="bca-7t-UBX"/>
-                                    <constraint firstItem="UgV-Xg-l2o" firstAttribute="firstBaseline" secondItem="CLD-AA-hae" secondAttribute="firstBaseline" id="fvA-LP-lnR"/>
-                                    <constraint firstItem="UgV-Xg-l2o" firstAttribute="top" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="5" id="gRY-WG-gix"/>
-                                    <constraint firstItem="CLD-AA-hae" firstAttribute="centerX" secondItem="CJ4-9Y-qVh" secondAttribute="centerX" id="j1A-kZ-oYr"/>
-                                    <constraint firstAttribute="bottom" secondItem="o4R-Ro-HrG" secondAttribute="bottom" constant="71" id="qCV-D0-ssd"/>
-                                    <constraint firstItem="6kM-yo-ggq" firstAttribute="centerY" secondItem="CLD-AA-hae" secondAttribute="centerY" id="qh3-6q-xrQ"/>
-                                    <constraint firstAttribute="trailing" secondItem="6kM-yo-ggq" secondAttribute="trailing" constant="10" id="tVu-1g-jV0"/>
-                                    <constraint firstItem="bKh-Ad-1ue" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" constant="80" id="vpe-Gq-0vX"/>
+                                    <constraint firstAttribute="trailing" secondItem="pOP-O8-6Cs" secondAttribute="trailing" constant="80" id="Qs8-Ox-kFE" customClass="NSLayoutHelper" customModule="LayoutHelper">
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
+                                                <real key="value" value="105"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </constraint>
+                                    <constraint firstAttribute="bottom" secondItem="o4R-Ro-HrG" secondAttribute="bottom" id="ffK-PE-5gI"/>
+                                    <constraint firstItem="bKh-Ad-1ue" firstAttribute="leading" secondItem="CJ4-9Y-qVh" secondAttribute="leading" constant="80" id="vpe-Gq-0vX" customClass="NSLayoutHelper" customModule="LayoutHelper">
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
+                                                <real key="value" value="105"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </constraint>
                                     <constraint firstItem="o4R-Ro-HrG" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="113" id="whk-9e-KyU"/>
                                     <constraint firstItem="bKh-Ad-1ue" firstAttribute="top" secondItem="CJ4-9Y-qVh" secondAttribute="top" constant="66" id="yFy-5d-5z0"/>
                                 </constraints>
@@ -191,10 +165,34 @@
                             </constraint>
                             <constraint firstItem="IC3-T9-cyx" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" constant="60" id="5fl-QY-XXf"/>
                             <constraint firstItem="WgH-X6-wHS" firstAttribute="leading" secondItem="Q1J-hB-kOf" secondAttribute="leading" id="7wJ-dr-wMY"/>
-                            <constraint firstItem="GiE-bE-6Q3" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="131" id="EfL-uK-jiY"/>
+                            <constraint firstItem="GiE-bE-6Q3" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="131" id="EfL-uK-jiY" customClass="NSLayoutHelper" customModule="LayoutHelper">
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
+                                        <real key="value" value="232"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
+                                        <real key="value" value="113"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
+                                        <real key="value" value="113"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </constraint>
                             <constraint firstItem="K7y-wS-Z1d" firstAttribute="leading" secondItem="xZc-em-SYW" secondAttribute="leading" id="F0d-ON-Id9"/>
                             <constraint firstItem="K7y-wS-Z1d" firstAttribute="top" secondItem="xZc-em-SYW" secondAttribute="top" id="H1r-MM-5US"/>
-                            <constraint firstItem="qxD-ml-ytI" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="88" id="IIH-0s-DaP"/>
+                            <constraint firstItem="qxD-ml-ytI" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="88" id="IIH-0s-DaP" customClass="NSLayoutHelper" customModule="LayoutHelper">
+                                <userDefinedRuntimeAttributes>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhone12ProMax">
+                                        <real key="value" value="188"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
+                                        <real key="value" value="66"/>
+                                    </userDefinedRuntimeAttribute>
+                                    <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE2G">
+                                        <real key="value" value="66"/>
+                                    </userDefinedRuntimeAttribute>
+                                </userDefinedRuntimeAttributes>
+                            </constraint>
                             <constraint firstItem="IC3-T9-cyx" firstAttribute="top" secondItem="Q1J-hB-kOf" secondAttribute="top" constant="215" id="N8I-Io-lgn" customClass="NSLayoutHelper" customModule="LayoutHelper">
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="iPhoneSE">
@@ -227,9 +225,6 @@
                     </view>
                     <connections>
                         <outlet property="TelaBottomView" destination="CJ4-9Y-qVh" id="d2C-NZ-7dQ"/>
-                        <outlet property="abilitiesButton" destination="CLD-AA-hae" id="kBU-el-dhG"/>
-                        <outlet property="aboutButton" destination="UgV-Xg-l2o" id="01o-x4-Q9c"/>
-                        <outlet property="attributesButton" destination="6kM-yo-ggq" id="MmG-ki-DRw"/>
                         <outlet property="infoCollectionView" destination="o4R-Ro-HrG" id="Tnr-Ky-Yfn"/>
                         <outlet property="telaTopView" destination="K7y-wS-Z1d" id="U7x-M3-GD8"/>
                     </connections>
