--- a/Pokedex/CollectionView/Main.storyboard
+++ b/Pokedex/CollectionView/Main.storyboard
@@ -36,7 +36,7 @@
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="pokemon-trainer__1_-removebg-preview 1" translatesAutoresizingMaskIntoConstraints="NO" id="r1m-4W-TSM">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Perfil" translatesAutoresizingMaskIntoConstraints="NO" id="r1m-4W-TSM">
                                 <rect key="frame" x="321" y="55" width="50" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
@@ -59,7 +59,7 @@
                             <constraint firstItem="mKA-w6-wkt" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" id="weI-C4-j17"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Home" image="home-removebg-preview 4 (1)" id="Y6U-m5-y0a"/>
+                    <tabBarItem key="tabBarItem" title="Home" image="BotaoHome" id="Y6U-m5-y0a"/>
                     <connections>
                         <outlet property="collectionView" destination="mKA-w6-wkt" id="eFW-RG-L4h"/>
                         <outlet property="imageProfile" destination="r1m-4W-TSM" id="t7b-Hr-pZP"/>
@@ -106,7 +106,7 @@
                         <viewLayoutGuide key="safeArea" id="mJq-4f-ocp"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Favoritos" image="favotiros-removebg-preview 4" id="71f-qa-daM"/>
+                    <tabBarItem key="tabBarItem" title="Favoritos" image="BotaoFavoritos" id="71f-qa-daM"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="8Hm-Oc-HkW" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -114,9 +114,9 @@
         </scene>
     </scenes>
     <resources>
-        <image name="favotiros-removebg-preview 4" width="53" height="50"/>
-        <image name="home-removebg-preview 4 (1)" width="48" height="45"/>
-        <image name="pokemon-trainer__1_-removebg-preview 1" width="26" height="27"/>
+        <image name="BotaoFavoritos" width="53" height="50"/>
+        <image name="BotaoHome" width="48" height="45"/>
+        <image name="Perfil" width="26" height="27"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
