--- a/Pokedex/CollectionView/Main.storyboard
+++ b/Pokedex/CollectionView/Main.storyboard
@@ -29,40 +29,44 @@
                                 <cells/>
                             </collectionView>
                             <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Pesquisar" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="NZ7-sh-fLG">
-                                <rect key="frame" x="35" y="63" width="256" height="34"/>
+                                <rect key="frame" x="45" y="59" width="244" height="34"/>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="34" id="vPj-5i-uId"/>
+                                    <constraint firstAttribute="width" constant="244" id="UVK-mg-yKj"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Perfil" translatesAutoresizingMaskIntoConstraints="NO" id="r1m-4W-TSM">
-                                <rect key="frame" x="321" y="55" width="50" height="50"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="knl-fy-UQy">
+                                <rect key="frame" x="334" y="51" width="50" height="50"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="50" id="2tB-Xr-gcb"/>
-                                    <constraint firstAttribute="height" constant="50" id="iGm-nG-S7W"/>
+                                    <constraint firstAttribute="height" constant="50" id="1Gi-EF-iZP"/>
+                                    <constraint firstAttribute="width" constant="50" id="ckR-53-bJ8"/>
                                 </constraints>
-                            </imageView>
+                                <state key="normal" title="Button"/>
+                                <buttonConfiguration key="configuration" style="plain" image="Perfil"/>
+                                <connections>
+                                    <action selector="didTapProfileButton:" destination="vi9-Gx-fJY" eventType="touchUpInside" id="ceH-db-I8v"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="AeB-yK-OJ7"/>
                         <color key="backgroundColor" systemColor="systemCyanColor"/>
                         <constraints>
-                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="r1m-4W-TSM" secondAttribute="trailing" constant="43" id="0cM-Sw-RJm"/>
-                            <constraint firstItem="r1m-4W-TSM" firstAttribute="leading" secondItem="NZ7-sh-fLG" secondAttribute="trailing" constant="30" id="53S-jQ-hY9"/>
-                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="15" id="D9n-qT-oX0"/>
-                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="mKA-w6-wkt" secondAttribute="trailing" id="IWI-Zi-TIq"/>
-                            <constraint firstItem="r1m-4W-TSM" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="7" id="aBp-gO-cha"/>
-                            <constraint firstItem="mKA-w6-wkt" firstAttribute="top" secondItem="r1m-4W-TSM" secondAttribute="bottom" constant="12" id="eGO-2w-sFK"/>
-                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="bottom" secondItem="mKA-w6-wkt" secondAttribute="bottom" constant="36" id="erz-xQ-G61"/>
-                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" constant="35" id="jig-oE-YdQ"/>
-                            <constraint firstItem="mKA-w6-wkt" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" id="weI-C4-j17"/>
+                            <constraint firstItem="mKA-w6-wkt" firstAttribute="top" secondItem="NZ7-sh-fLG" secondAttribute="bottom" constant="24" id="ALp-So-lkx"/>
+                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="bottom" secondItem="mKA-w6-wkt" secondAttribute="bottom" constant="36" id="K6r-v4-Y5q"/>
+                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" constant="45" id="Nqp-iH-qlE"/>
+                            <constraint firstItem="AeB-yK-OJ7" firstAttribute="trailing" secondItem="knl-fy-UQy" secondAttribute="trailing" constant="30" id="SnJ-6K-dZK"/>
+                            <constraint firstItem="mKA-w6-wkt" firstAttribute="trailing" secondItem="AeB-yK-OJ7" secondAttribute="trailing" id="TSN-By-V5c"/>
+                            <constraint firstItem="NZ7-sh-fLG" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="11" id="VxW-YU-M11"/>
+                            <constraint firstItem="mKA-w6-wkt" firstAttribute="leading" secondItem="AeB-yK-OJ7" secondAttribute="leading" id="cb2-dB-4Y8"/>
+                            <constraint firstItem="knl-fy-UQy" firstAttribute="top" secondItem="AeB-yK-OJ7" secondAttribute="top" constant="3" id="zz2-P7-7VL"/>
                         </constraints>
                     </view>
                     <tabBarItem key="tabBarItem" title="Home" image="BotaoHome" id="Y6U-m5-y0a"/>
                     <connections>
                         <outlet property="collectionView" destination="mKA-w6-wkt" id="eFW-RG-L4h"/>
-                        <outlet property="imageProfile" destination="r1m-4W-TSM" id="t7b-Hr-pZP"/>
+                        <outlet property="profileButton" destination="knl-fy-UQy" id="OTL-5c-wKX"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="K9l-no-dmF" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
