--- a/Pokedex/Favorites/Cell/favoritesCollectionViewCell.xib
+++ b/Pokedex/Favorites/Cell/favoritesCollectionViewCell.xib
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21225" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21207"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="favoritesCollectionViewCell" id="gTV-IL-0wX" customClass="favoritesCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="favoritesCollectionViewCell" id="gTV-IL-0wX" customClass="FavoritesCollectionViewCell" customModule="Pokedex" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="357" height="119"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -80,7 +80,7 @@
                 <outlet property="pokemonTypeImageView" destination="SVH-vY-N4B" id="A5m-RM-6me"/>
                 <outlet property="shadowView" destination="quM-pS-RfC" id="OcP-eD-eOt"/>
             </connections>
-            <point key="canvasLocation" x="221" y="16"/>
+            <point key="canvasLocation" x="219.56521739130437" y="15.736607142857142"/>
         </collectionViewCell>
     </objects>
     <resources>
